-Added Spring Security BCrypt encryption for new users. -Login page with password matching required. -Fixed profile picture display after hover. -Added hibernate auto update instead of create so tables are not reset.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=/resources/static/assets/img/user-photos
+ spring.jpa.hibernate.ddl-auto=update
